--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon.png">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Yang's Blog</title>
+    <title>Home</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
     <link href="/static/css/gaia.css" rel="stylesheet"/>
@@ -96,7 +96,25 @@
                    Text TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText Text
                 </p>
   
+            </div>
 
+            <div ng-app="myApp" ng-controller="myCtrl" class="tab-container">
+                 <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                       <th>Name</th>
+                       <th>Roll No</th>
+                       <th>Percentage</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat = "student in students">
+                       <td>{{ student.Name }}</td>
+                       <td>{{ student.RollNo }}</td>
+                       <td>{{ student.Percentage }}</td>
+                    </tr>
+                    </tbody>
+                 </table>
             </div>
 
         </div>
@@ -141,5 +159,22 @@
 
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="/static/js/gaia.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+
+<script>
+
+var ajax = angular.module('myApp', []);
+ajax.controller('myCtrl', function($scope, $http) {
+ 
+    $http({
+        method : "GET",
+        url : "/data.txt"
+    }).then(function(response) {
+               $scope.students = response.data;
+    });
+});
+
+</script>
 
 </html>
