--- a/freebie.html
+++ b/freebie.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/img/apple-icon.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon.png">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Gaia - Bootstrap Template | Free Demo</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <link href="assets/css/gaia.css" rel="stylesheet"/>
+    <link href="/static/css/bootstrap.css" rel="stylesheet" />
+    <link href="/static/css/gaia.css" rel="stylesheet"/>
 
     <!--     Fonts and icons     -->
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <link href="/static/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
     <div class="section section-header">
         <div class="parallax filter filter-color-red">
             <div class="image"
-                style="background-image: url('assets/img/header-1.jpeg')">
+                style="background-image: url('/static/img/header-1.jpeg')">
             </div>
             <div class="container">
                 <div class="content">
@@ -135,7 +135,7 @@
 
     <div class="section section-our-team-freebie">
         <div class="parallax filter filter-color-black">
-            <div class="image" style="background-image:url('assets/img/header-2.jpeg')">
+            <div class="image" style="background-image:url('/static/img/header-2.jpeg')">
             </div>
             <div class="container">
                 <div class="content">
@@ -216,21 +216,21 @@
                 <li class="active">
                     <a href="#testimonial1" role="tab" data-toggle="tab">
                         <div class="image-clients">
-                            <img alt="..." class="img-circle" src="assets/img/faces/face_5.jpg"/>
+                            <img alt="..." class="img-circle" src="/static/img/faces/face_5.jpg"/>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#testimonial2" role="tab" data-toggle="tab">
                         <div class="image-clients">
-                            <img alt="..." class="img-circle" src="assets/img/faces/face_6.jpg"/>
+                            <img alt="..." class="img-circle" src="/static/img/faces/face_6.jpg"/>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#testimonial3" role="tab" data-toggle="tab">
                         <div class="image-clients">
-                            <img alt="..." class="img-circle" src="assets/img/faces/face_2.jpg"/>
+                            <img alt="..." class="img-circle" src="/static/img/faces/face_2.jpg"/>
                         </div>
                     </a>
                 </li>
@@ -261,7 +261,7 @@
     <div class="section section-small section-get-started">
         <div class="parallax filter">
             <div class="image"
-                style="background-image: url('assets/img/office-1.jpeg')">
+                style="background-image: url('/static/img/office-1.jpeg')">
             </div>
             <div class="container">
                 <div class="title-area">
@@ -388,16 +388,16 @@
 </body>
 
 <!--   core js files    -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.js" type="text/javascript"></script>
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/bootstrap.js" type="text/javascript"></script>
 
 <!--  js library for devices recognition -->
-<script type="text/javascript" src="assets/js/modernizr.js"></script>
+<script type="text/javascript" src="/static/js/modernizr.js"></script>
 
 <!--  script for google maps   -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
-<script type="text/javascript" src="assets/js/gaia.js"></script>
+<script type="text/javascript" src="/static/js/gaia.js"></script>
 
 </html>
