--- a/learn/index.html
+++ b/learn/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon.png">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Yang's Blog</title>
+    <title>Blog</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
     <link href="/static/css/gaia.css" rel="stylesheet"/>
@@ -70,8 +70,8 @@
             <div class="container">
                 <div class="content">
                     <div class="title-area">
-                        <h1 class="title-modern">Post Title</h1>
-                        <h3>Post sub title</h2>
+                        <h1 class="title-modern">Learn</h1>
+                        <h3>This is what I learn</h2>
                         <div class="separator line-separator">♦</div>
                     </div>
                 </div>
@@ -96,7 +96,25 @@
                    Text TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText Text
                 </p>
   
+            </div>
 
+            <div ng-app="myApp" ng-controller="myCtrl" class="tab-container">
+                 <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                       <th>Name</th>
+                       <th>Description</th>
+                       <th>Modified/Created</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat = "post in blog_posts">
+                       <td><a href="/{{post.filename}}">{{ post.title }}</a></td>
+                       <td>{{ post.subtitle }}</td>
+                       <td>{{ post.date }}</td>
+                    </tr>
+                    </tbody>
+                 </table>
             </div>
 
         </div>
@@ -141,5 +159,22 @@
 
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="/static/js/gaia.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+
+<script>
+
+var ajax = angular.module('myApp', []);
+ajax.controller('myCtrl', function($scope, $http) {
+ 
+    $http({
+        method : "GET",
+        url : "/learn/index.json"
+    }).then(function(response) {
+               $scope.blog_posts = response.data;
+    });
+});
+
+</script>
 
 </html>
