--- a/learn/template.html
+++ b/learn/template.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon.png">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Home</title>
+    <title>Blog</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
     <link href="/static/css/gaia.css" rel="stylesheet"/>
@@ -37,10 +37,10 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right navbar-uppercase">
                     <li>
-                        <a href="blog/" target="_blank">Blog</a>
+                        <a href="/blog/" target="_blank">Blog</a>
                     </li>
                     <li>
-                        <a href="learn/" target="_blank">Learn</a>
+                        <a href="/learn/" target="_blank">Learn</a>
                     </li>
                     <li class="dropdown">
                         <a href="#gaia" class="dropdown-toggle" data-toggle="dropdown">
@@ -70,8 +70,8 @@
             <div class="container">
                 <div class="content">
                     <div class="title-area">
-                        <h1 class="title-modern">Post Title</h1>
-                        <h3>Post sub title</h2>
+                        <h1 class="title-modern">Learn</h1>
+                        <h3>This is what I learn</h2>
                         <div class="separator line-separator">♦</div>
                     </div>
                 </div>
@@ -98,6 +98,24 @@
   
             </div>
 
+            <div ng-app="myApp" ng-controller="myCtrl" class="tab-container">
+                 <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                       <th>Name</th>
+                       <th>Description</th>
+                       <th>Modified/Created</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat = "post in blog_posts">
+                       <td><a href="/{{post.filename}}">{{ post.title }}</a></td>
+                       <td>{{ post.subtitle }}</td>
+                       <td>{{ post.date }}</td>
+                    </tr>
+                    </tbody>
+                 </table>
+            </div>
 
         </div>
     </div>
@@ -113,10 +131,10 @@
                                 <li>
                                     <a href="/">Home</a></li>
                                 <li>
-                                    <a href="blog/">Blog</a>
+                                    <a href="/blog/">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="learn/">Learn</a>
+                                    <a href="/learn/">Learn</a>
                                 </li>
                             </ul>
                         </nav>
@@ -144,5 +162,19 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 
+<script>
+
+var ajax = angular.module('myApp', []);
+ajax.controller('myCtrl', function($scope, $http) {
+ 
+    $http({
+        method : "GET",
+        url : "/learn/index.json"
+    }).then(function(response) {
+               $scope.blog_posts = response.data;
+    });
+});
+
+</script>
 
 </html>
