--- a/index.html
+++ b/index.html
@@ -90,17 +90,90 @@
                 <div class="separator separator-danger">∎</div>
             </div>
 
-
             <div class="tab-content">
                 <p class="description">
                    Text TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText TextText Text
                 </p>
-  
             </div>
-
-
         </div>
     </div>
+
+    <div class="section section-our-team-freebie">
+        <div class="parallax filter filter-color-black">
+            <div class="image" style="background-image:url('/static/img/header-2.jpeg')">
+            </div>
+            <div class="container">
+                <div class="content">
+                    <div class="row">
+                        <div class="title-area">
+                            <h2>What I Use</h2>
+                            <div class="separator separator-danger">✻</div>
+                            <p class="description">Some online website or tools I use.</p>
+                        </div>
+                    </div>
+
+                    <div class="team">
+                        <div class="row">
+                            <div class="col-md-10 col-md-offset-1">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="card card-member">
+                                            <a href="c9.io">
+                                            <div class="content">
+                                                <div class="avatar avatar-blue">
+                                                    <img alt="..." class="img-circle" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Cloud9IDE.png/260px-Cloud9IDE.png"/>
+                                                </div>
+                                                <div class="description">
+                                                    <h3 class="title">Cloud9 IDE</h3>
+                                                    <p class="small-text">c9.io</p>
+                                                    <p class="description">Cloud9 IDE is an online integrated development environment, published as open source from version 2.0, until version 3.0. It supports multiple programming languages, including C, C++, PHP, Ruby, Perl, Python, JavaScript with Node.js, and Go. Wikipedia</p>
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="card card-member">
+                                            <a href="github.com">
+                                            <div class="content">
+                                                <div class="avatar avatar-blue">
+                                                    <img alt="..." class="img-circle" src="https://pbs.twimg.com/profile_images/1017516299143041024/fLFdcGsl_400x400.jpg"/>
+                                                </div>
+                                                <div class="description">
+                                                    <h3 class="title">GitHub Inc.</h3>
+                                                    <p class="small-text">github.com</p>
+                                                    <p class="description">GitHub Inc. is a web-based hosting service for version control using Git. It is mostly used for computer code. It offers all of the distributed version control and source code management functionality of Git as well as adding its own features.</p>
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="card card-member">
+                                            <a href="heroku.com">
+                                            <div class="content">
+                                                <div class="avatar avatar-blue">
+                                                    <img alt="..." class="img-circle" src="https://upload.wikimedia.org/wikipedia/en/a/a9/Heroku_logo.png"/>
+                                                </div>
+                                                <div class="description">
+                                                    <h3 class="title">Heroku</h3>
+                                                    <p class="small-text">heroku.com</p>
+                                                    <p class="description">Heroku is a cloud platform as a service (PaaS) supporting several programming languages. Heroku, one of the first cloud platforms, has been in development since June 2007, when it supported only the Ruby programming language, but now supports Java, Node.js, Scala, Clojure, Python, PHP, and Go. Wikipedia</p>
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <footer class="footer footer-big footer-color-black" data-color="black">
         <div class="container">
